k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fintech-api-service
  labels:
    app: fintech-api
    team: fintech # Importante para o prometheus identificar o dono do serviço
spec:
  type: ClusterIP # Em ambiente de produção K8s, o Ingress gerencia o tráfego, não o Service. 
                  # Usar LoadBalancer interno é overkill e custo extra.
  selector:
    app: fintech-api
  ports:
    - name: http-web
      protocol: TCP
      port: 80         # Porta de serviço que o Ingress/Prometheus vai chamar
      targetPort: 8080 # A porta que o Flask está escutando
